--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,15 @@ body {
     line-height: 1.3;
     font-weight: lighter;
 }
+.jumbotron .btn {
+    margin-top: 22px;
+    font-family: museo-slab,Georgia,"Times New Roman",Times,serif;
+    font-size: 24px;
+    padding: 17px 30px;
+    color: #fff;
+    border-color: #c7e7dc;
+    background-color: transparent;
+}
 .credits {
     margin-top: 22px;
     font-size: 14px;
