--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,21 @@
-body {
-	margin-top: 50px; /* 50px is the height of the navbar - change this if the navbarn height changes */
-}
-
 .header-image {
 	height: auto;
 	display: block;
 	width: 100%;
 	text-align: center;
 }
-
-.headline {
-	padding: 120px 0;
+.jumbotron {
+    background: #5cb85c;
+    color: #fff;
+    padding-top: 100px;
+    text-align: center;
 }
 
 .jumbotron h1 {
+    font-size: 90px;
     letter-spacing: -2px;
     line-height: 1;
-    margin: 0 0 15px;
+    margin: 0 0 5px;
 }
 
 .jumbotron h2 {
@@ -25,38 +24,60 @@ body {
     text-transform: uppercase;
     line-height: 1.3;
     font-weight: lighter;
+    margin: 0;
 }
 .jumbotron .btn {
-    margin-top: 22px;
-    font-family: museo-slab,Georgia,"Times New Roman",Times,serif;
+    margin: 30px auto 0 auto;
     font-size: 24px;
     padding: 17px 30px;
-    color: #fff;
     border-color: #c7e7dc;
     background-color: transparent;
+}
+.jumbotron .btn:hover {
+    background-color: #f4faf8;
+    border-color: #f4faf8;
+    color: #5cb85c;
+    text-shadow: 0 -1px 0 #fff;
+}
+.jumbotron .fa-stack {
+    color: #333;
+}
+.jumbotron .fa-stack {
+        font-size: 8em;
+}
+.jumbotron .fa-text {
+    color: #5cb85c;
+    font-size: .7em;
+    line-height: 2.2em;
+}
+.jumbotron .fa-stack-1x, 
+.jumbotron .fa-stack-2x {
+    left: 0;
 }
 .credits {
     margin-top: 22px;
     font-size: 14px;
     line-height: 1.428571429;
 }
-
+.credits a {
+    color: #bbe2d5;
+    border-bottom: dotted 1px #8eceba;
+}
+.credits a:hover, 
+.credits a:focus {
+    text-decoration: none;
+    color: #198764;
+    border-bottom: solid 1px #198764;
+}
 .featurette-divider {
 	margin: 80px 0;
 }
-.featurette {
-	overflow: hidden; 
+.screenshot {
+-webkit-box-shadow: 0 0 10px #333;
+        box-shadow: 0 0 10px #333;
 }
-
-.featurette-image.pull-left {
-	margin-right: 40px;
-}
-.featurette-image.pull-right {
-	margin-left: 40px;
-}
-
-.featurette-heading {
-	font-size: 50px;
+p {
+    font-size: 16px;
 }
 
 footer {
@@ -67,40 +88,37 @@ footer {
 
 @media (max-width: 1200px) {
 
-.headline > .container > h1 {font-size: 140px;}
-.headline > .container > h2 {font-size: 63px;}
 .featurette-divider {margin: 50px 0;}
-.featurette-image.pull-left {margin-right: 20px;}
+    .featurette-image.pull-left {margin-right: 20px;}
 .featurette-image.pull-right {margin-left: 20px;}
-.featurette-heading {font-size: 35px;}
+.featurette-heading {font-size: 30px;}
 
 }
 
 @media (max-width: 991px) {
 
-.headline > .container > h1 {font-size: 105px;}
-.headline > .container > h2 {font-size: 50px;}
 .featurette-divider {margin: 40px 0;}
 .featurette-image {max-width: 50%;}
 .featurette-image.pull-left {margin-right: 10px;}
 .featurette-image.pull-right {margin-left: 10px;}
-.featurette-heading {font-size: 30px;}
+.featurette-heading {font-size: 25px;}
 
 }
 
 @media (max-width: 768px) {
-	
+
+.screenshot { margin: 0 auto; }
 .container {margin: 0 15px;}
 .featurette-divider {margin: 40px 0;}
-.featurette-heading {font-size: 25px;}
+.featurette-heading {font-size: 20px;}
 
 }
 
 
 @media (max-width: 668px) {
 
-.headline > .container > h1 {font-size: 70px;}
-.headline > .container > h2 {font-size: 32px;}
+.jumbotron h1 {font-size: 70px;}
+.jumbotron h2 {font-size: 32px;}
 .featurette-divider {margin: 30px 0;}
 
 }
@@ -108,8 +126,8 @@ footer {
 @media (max-width: 640px) {
 
 .headline {padding: 75px 0 25px 0;}
-.headline > .container > h1 {font-size: 60px;}
-.headline > .container > h2 {font-size: 30px;}
+.jumbotron h1 {font-size: 60px;}
+.jumbotron h2 {font-size: 30px;}
 
 }
 
