--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,9 @@ footer {
 .headline {padding: 75px 0 25px 0;}
 .jumbotron h1 {font-size: 60px;}
 .jumbotron h2 {font-size: 30px;}
-
+.jumbotron .fa-stack {
+        font-size: 6em;
+}
 }
 
 @media (max-width: 375px) {
