--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
     margin: 0;
 }
 .jumbotron .btn {
+    color: #fff;
     margin: 30px auto 0 auto;
     font-size: 24px;
     padding: 17px 30px;
