Clean up HTML in help-tab popup

--- a/includes/help/css/fontawesome-shortcodes-help.css
+++ b/includes/help/css/fontawesome-shortcodes-help.css
@@ -1,3 +1,9 @@
+#fontawesome-shortcodes-help a:link,
+#fontwesome-shortcodes-help a:visited {
+    color: #428bca;
+    font-size: 14px;
+}
+
   #fontawesome-shortcodes-help .fontawesome-icon-list .fa-hover { font-size: 14px; }
   #fontawesome-shortcodes-help .fontawesome-icon-list{margin-top:22px}.fontawesome-icon-list .fa-hover a{display:block;color:#222;line-height:32px;height:32px;padding-left:10px;border-radius:4px}.fontawesome-icon-list .fa-hover a .fa{width:32px;font-size:14px;display:inline-block;text-align:right;margin-right:10px}
   #fontawesome-shortcodes-help .fontawesome-icon-list .fa-hover a:hover{background-color:#1d9d74;color:#fff;text-decoration:none}.fontawesome-icon-list .fa-hover a:hover .fa{font-size:28px;vertical-align:-6px}
