--- a/includes/help/README.html
+++ b/includes/help/README.html
@@ -1,7 +1,7 @@
 <h1 id="font-awesome-shortcodes-for-wordpress">Font Awesome Shortcodes for WordPress</h1>
 <p>This is a plugin for WordPress that adds shortcodes for easier use of the Font Awesome icons in your content.</p>
 <h2 id="requirements">Requirements</h2>
-<p>This plugin won't do anything if you don't have WordPress theme built with <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>. <strong>The plugin does not include Font Awesome</strong>.</p>
+<p>This plugin won&#39;t do anything if you don&#39;t have WordPress theme built with <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>. <strong>The plugin does not include Font Awesome</strong>.</p>
 <p>The plugin is tested to work with <code>Font Awesome version 4.0</code> and <code>WordPress 3.9</code>.</p>
 <h2 id="supported-shortcodes">Supported shortcodes</h2>
 <ul>
@@ -10,8 +10,7 @@
 </ul>
 <h2 id="usage">Usage</h2>
 <h3 id="icons">Icons</h3>
-<pre><code>[fa type="exclamation"]
-</code></pre>
+<pre><code>[fa type=&quot;exclamation&quot;]</code></pre>
 <table>
 <thead>
 <tr>
@@ -39,7 +38,7 @@
 </tr>
 <tr>
 <td>border</td>
-<td>Whether the font is displayed using the "bordered" style</td>
+<td>Whether the font is displayed using the &quot;bordered&quot; style</td>
 <td>optional</td>
 <td>true, false</td>
 <td>false</td>
@@ -53,14 +52,14 @@
 </tr>
 <tr>
 <td>list_item</td>
-<td>Set "true" if the icon is within a list item for better spacing</td>
+<td>Set &quot;true&quot; if the icon is within a list item for better spacing</td>
 <td>optional</td>
 <td>true, false</td>
 <td>false</td>
 </tr>
 <tr>
 <td>fixed_width</td>
-<td>Set "true" if the icon should keep a fixed width for spacing in a menu</td>
+<td>Set &quot;true&quot; if the icon should keep a fixed width for spacing in a menu</td>
 <td>optional</td>
 <td>true, false</td>
 <td>false</td>
@@ -88,7 +87,7 @@
 </tr>
 <tr>
 <td>inverse</td>
-<td>Whether this icon's color should be inverted (useful in stacks)</td>
+<td>Whether this icon&#39;s color should be inverted (useful in stacks)</td>
 <td>optional</td>
 <td>true, false</td>
 <td>false</td>
@@ -104,11 +103,10 @@
 </table>
 <p><a href="http://fortawesome.github.io/Font-Awesome/cheatsheet/">Icon Reference</a>.</p>
 <h3 id="icon-stacks">Icon Stacks</h3>
-<pre><code>[fa-stack size="lg"] 
-    [fa type="circle" stack_size="2x"]
-    [fa type="flag" inverse="true" stack_size="1x"]
-[/fa-stack]
-</code></pre>
+<pre><code>[fa-stack size=&quot;lg&quot;] 
+    [fa type=&quot;circle&quot; stack_size=&quot;2x&quot;]
+    [fa type=&quot;flag&quot; inverse=&quot;true&quot; stack_size=&quot;1x&quot;]
+[/fa-stack]</code></pre>
 <table>
 <thead>
 <tr>
