--- a/includes/help/icon-list.html
+++ b/includes/help/icon-list.html
@@ -838,7 +838,7 @@
       <li>
         <i class="fa fa-info-circle fa-lg fa-li"></i>
         These icons work great with the <code>fa-spin</code> class. Check out the
-        <a href="" class="alert-link">spinning icons example</a>.
+        <strong>spinning icons example</strong>.
       </li>
     </ul>
   </div>
