--- a/includes/help/README.html
+++ b/includes/help/README.html
@@ -3,7 +3,7 @@
 <h2 id="requirements">Requirements</h2>
 <p>This plugin won&#39;t do anything if you don&#39;t have WordPress theme built with <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>. <strong>The plugin does not include Font Awesome</strong>.</p>
 <p>The plugin is tested to work with <code>Font Awesome version 4.1</code> and <code>WordPress 3.9</code>.</p>
-<h2 id="supported-shortcodes">Supported shortcodes</h2>
+<h2 id="shortcode-reference">Supported shortcodes</h2>
 <ul>
 <li><a href="#icons">Icons</a></li>
 <li><a href="#icon-stacks">Icon Stacks</a></li>
