Fix conflict with Time.ly All-In-One Events Calendar

--- a/includes/help/css/fontawesome-shortcodes-help.css
+++ b/includes/help/css/fontawesome-shortcodes-help.css
@@ -13,8 +13,7 @@
   outline: 0;
   background-color: transparent;
   width: auto;
-  margin-left: auto;
-
+  margin: 0 auto;
 }
 
 #fontawesome-shortcodes-help .modal-body {
