--- a/includes/help/README.html
+++ b/includes/help/README.html
@@ -139,10 +139,10 @@
 <p><a href="http://fortawesome.github.io/Font-Awesome/examples/">Font Awesome documentation</a>.</p>
 <hr>
 <h3 id="icon-lists">Icon Lists</h3>
-<p>When using <code>list_item=&quot;true&quot;</code> for icons, be sure to wrap the list in <code>[fa-ul]</code> and <code>[/fa-ul]</code>.
-    [fa-ul] 
-        Standard HTML or WordPress list goes here.
-    [/fa-ul]</p>
+<p>When using <code>list_item=&quot;true&quot;</code> for icons, be sure to wrap the list in <code>[fa-ul]</code> and <code>[/fa-ul]</code>.</p>
+<pre><code>[fa-ul] 
+    Standard HTML or WordPress list goes here.
+[/fa-ul]</code></pre>
 <table>
 <thead>
 <tr>
